feat: update vite

--- a/面试/leung/weixin/模块化.md
+++ b/面试/leung/weixin/模块化.md
@@ -1,8 +1,71 @@
-### require和import的区别
+### [require和import的区别](https://zhuanlan.zhihu.com/p/121770261)
 
 > 运行时加载和编译时加载
 
+### vite2 （v te）
+  * IDE 集成的开发环境
+  * 主要目的是想让开发者在开发模式下更快的开发
+    >  使用 JavaScript 开发的工具通常需要很长时间（甚至是几分钟！）才能启动开发服务器，即使使用 HMR，文件修改后的效果也需要几秒钟才能在浏览器中反映出来。
+    > 根本原因是 
+    > 通过捆绑的需要；为什么需要捆绑？
+    1. 因为在我们有原生的es模块之前，浏览器没有办法去支持这些模块化代码；所以在早期的话 我们发明了模块化系统，比如amd commonjs.然后通过webpack,rollup来捆绑这些代码，最后变成一个文件，使他们能在浏览器中运行。幸运的是 现在浏览器本地支持了es模块； 这意味着开发过程中，有大量的工作要做，我们不需要做；
+    2. vite怎么做的呢？
+       1. vite会取es模块，然后解析文件，查找你的导入语句，然后会为每个模块发送http请求(核心)到dev服务器。而开发服务器只是按原样提供这些模块，使用是非常轻量；所以 很多工作都是由浏览器本地完成的。这就是我们不需要什么准备，当我们启动服务器时
+       2. 而且 如果你有很大的依赖性，vite会用esbuild智能的预打包它们。（速度很快 因为esbuild使用go语言实现的），以减少http请求数量。浏览器需要创建一个开发服务器。现在，这个绑定过程是通过esbuild完成的。esbuild是一个本地语言编译，所以速度非常快，所以它的速度是数量级的，而不是用js编写的等价bundle；
+       3. 所以vite 极快的速度提高开发经验。 如果没有用过 我建议你去用 因为速度真的非常快。
+       4. 100多ms 速度极快 打开一个项目
+       5. 你根本不需要安装ts，就可以使用ts文件； main.js==》main.ts;意味着ts 可以开箱即用；
+       6. 这会导致vite 不会对你ts进行任何类型检查。为什么这么做呢？ 因为使用的esbuild编译的ts文件，esbuild也是go写的。所以他实际快了30倍；而不是用typescript本身来编译ts文件，是用js写的。 所以当我们用esbuild来转化时。因为他不做类型检查，如果你要导入一个类型，确保从另一个文件导入类型，所以这是经常容易犯错的一件事。所以他把这个类型检查交给了vscode； 所以不会像webpack那样报错。
+       7. 你修改css的时候 刚点确认，你会发现，页面并没有重载，页面效果就更新了。 这就是热更新
+       8. * 因为他是一个本机的，简单的http服务器， 他不会做重新加载，不会自动重新加载页面。
+       9. css的热更新 是开箱即用，速度非常快
+       10. vite内部集成了IDE,里面回返回了esbuild
+    > 缺点 我开发起来的时候，ts检查有时候缓存了，检查慢了。
 
+    * css
+      * 一旦我们更新css配置，需要重新打开开发服务器
+      1. 平时开发 css是必不可少的，比如自动格式化等。所以vite自带psotcss
+         1. npm insall postcss-nesting; postcss-config.js.
+      2. 实际原理是 通过css倒入到js；
+      3. 模块化css，实际是转化成了一个类的css，然后内容是被hash化的。每个类都有自己的哈希范围，所以不会被冲突
+    * assets的引入问题
+      * 1. improt svg from './favicon.svg' 会打印出这个文件的名字 console.log(favicon.svg)；但是实际使用这个变量的时候，开发服务器回自动带上路径
+        * 当我们import 一些assets 资产 图片资源的时候。它们会把这个认为是一个模块图（module）一个部分。
+          * 当我们打包的时候 会发现移动到assets目录上，
+       ```
+          import favicon from './favicon.svg' // 他会被默认的移动到assets目录下 并带上hash。 因为你Import 他会把你看作为module parah的一部分
+          ${favicon}
+          但是当我们想要字符串的时候，可以把资源放到public 就行。 打包出来的时候 这个资源也会在根目录下
+       ```
+
+    * 处理vue3的包 是@vue/compiler-sfc
+
+    * vite有个东西比较好 构建优化
+        ```
+          //async.js
+          import 'style.css'
+
+          //main.js
+          import('async.js').then(mod=>{}) // 异步模块
+          // assets/async.22.js  // module pagrah
+          // assets/async.66.css // 分割 构建优化 而且这2个请求是并行的
+          // 这就是vite的优化 帮你从盒子拿出来 就是当作一个js异步被加载。它的关联css是并行加载的。所以你不需要等到js块被加载，然后再加载css；
+            尽可能确保并行加载
+       ```
+      * 自动进行css spirit 
+      * import(a.js).then(res=>) ---> assets/assets.222js 哈希  js three shaking
+      * async.55.css
+
+    * vite不建议esmodule和require混合使用。因为所有文件都作为本机的es module使用。所以只允许本地es倒入；
+    * 因为require技术是在nodejs上的概念
+    * nodejs也在向本地的esm迈进。 所以你用require代码，请该用esm的方式
+    * 但是如果你想用require在vite。在源代码中 vite也会帮你处理。因为当他们绑定依赖项的时候，esbuild将处理require调用把它们捆绑在一起，所以最终也是一个有效的es模块。但是还是不建议你用require 在vite。
+    * require.context webpack的功能去检查目录的功能。然后在构建的时候，你得到包含的一些文件对象。
+    * 然后vite里面有个glob import 
+    * const module = import.meta.glob('*.js') //如果你想加载全部内容 import.meta.globEager
+
+
+  //    里面有个awesome-vite 里面也有大量的插件可以使用 比如 wp2-vite
 ### javascript开发模式 23种
   * 最古老的就是工厂模式
   * 单例模式
