--- a/面试/leung/weixin/微信前端面试题准备.md
+++ b/面试/leung/weixin/微信前端面试题准备.md
@@ -3,3 +3,8 @@
 ### [2.前端q 微信好文](https://juejin.cn/post/6844904154675183623#heading-2)
 
 ### [3.网上文章3](https://www.cnblogs.com/yugege/p/10631339.html)
+
+
+  * 1. [1000-div](https://github.com/airuikun/technology-blog/issues/15)
+  * 2. [第 6 题：（开放题）2万小球问题：在浏览器端，用js存储2万个小球的信息，包含小球的大小，位置，颜色等，如何做到对这2万条小球信息进行最优检索和存储]
+  * 3. [git时光机](https://github.com/airuikun/front-core/issues/5)
