--- a/面试/leung/weixin/项目优化.md
+++ b/面试/leung/weixin/项目优化.md
@@ -1,2 +1,102 @@
 ### 性能优化指标
 
+
+### 项目优化
+  * 优化webpack配置
+    * 1. webpack开发体验优化
+    * 优化loader配置；test/include/exclude 三个配置项来命中 Loader 要应用规则的文件
+    * 优化resolve配置，可以减少一些搜索的配置
+    * 拆包；使用ddlplugin 拆分 bundles，同时还大大提升了构建的速度。webpack5现在用的是`HardSourceWebpackPlugin`。
+      * ddlplugin用起来复杂，一样的优化效果
+    * happypack 多线程打包
+      * Webpack 是单线程模型的，也就是说 Webpack 需要一个一个地处理任务，不能同时处理多个任务。HappyPack将任 务分解给多个子进程去并发执行，子进程处理完后再将结果发送给主进程,从而发挥多核 CPU 电脑的威力
+      * 在整个 Webpack 构建流程中，最耗时的流程可能就是 Loader 对文件的转换操作了，因为要转换的文件数据量巨大，而且这些转换操作都只能一个一个地处理 HappyPack 的核心原理就是将这部分任务分解到多个进程中去并行处理，从而减少总的构建时间
+    * ParallelUglifyPlugin
+      * webpack默认提供了UglifyJS插件来压缩JS代码，但是它使用的是单线程压缩代码，也就是说多个js文件需要被压缩，它需要一个个文件进行压缩。所以说在正式环境打包压缩代码速度非常慢(因为压缩JS代码需要先把代码解析成用Object抽象表示的AST语法树，再去应用各种规则分析和处理AST，导致这个过程耗时非常大)。
+
+      * 当webpack有多个JS文件需要输出和压缩时候，原来会使用UglifyJS去一个个压缩并且输出，但是ParallelUglifyPlugin插件则会开启多个子进程，把对多个文件压缩的工作分别给多个子进程去完成，但是每个子进程还是通过UglifyJS去压缩代码。无非就是变成了并行处理该压缩了，并行处理多个子任务，效率会更加的提高。
+    * 优化文件监听的性能
+      * ingored : node_modules的东西
+    * 开启热更新 hmr
+
+    * 2.输出质量优化
+      * 如果有cdn的话，可以使用webpack接入cdn，这个比较少用
+      * 使用tree shaking；模块
+      * 提供公共代码 splitChunks
+      * 分割代码 ，按需加载 使用import()语法，传统的require.ensure
+      * 分析工具
+  * 如果有多个项目共享一个文件，使用unpkg+cdn的形式，代替npm包
+  * 使用webp图片的格式，可以保证在最大化的减少图片体积的提前少，保持保质量的清晰度
+  * 使用微前端的模式，mf 去共享公共函数库和组件库。代替npm包的问题
+  * 使用vite+vue3.0的形式，去代替以前在大项目里通过ci/cd发布单个项目的形式
+    * 1. 优化了开发体验的效果，速度更快
+  * 使用oss压缩图片的功能，封装公共的filterImage方法。 有阿里云的oss，居然不用里面的功能
+  * 图片资源比较多的时候，可以使用图片懒加载  vue-LazyLoad
+    * 原理的话 
+      * 1.图片先用占位符表示，不要将图片地址放到src属性中，而是放到其它属性(data-original)中
+      *2页面加载完成后，监听窗口滚动，当图片出现在视窗中时再给它赋予真实的图片地址，也就是将data-original中的属性拿出来放到src属性中
+      *在滚动页面的过程中，通过给scroll事件绑定lazyload函数，不断的加载出需要的图片
+
+    注意：请对lazyload函数使用防抖与节流，不懂这两的可以自己去查
+    * 判断元素进入视口viewport
+      * Ele.offsetTop < window.innerHeight + document.body.scrollTop
+    * getBoundingClientReact
+    * Intersection Observer
+    * 谷歌的 loading="lazy"属性
+    * 使用css3 提高到合成层，通过gpu加速渲染
+
+> 可以从代码层 应用层去说这个优化
+
+
+ ### 性能优化指标
+ >Google DoubleClick 研究表明：如果一个移动端页面加载时长超过 3 秒，用户就会放弃而离开
+
+  * 三个过程来看性能指标
+    * 1.文档的加载过程
+    * 2.文档的渲染呈现过程
+    * 3.交互过程 谷歌有个工具可以看fps的过程的。 如果fps越平稳，说明你的交互过程越平滑 越好
+
+  * 文档的加载过程
+    * 下图是 W3C 的 Navigation Timing 的处理模型，从当前浏览器窗口卸载旧页面开始，到新页面加载完成，整个过程一共被切分为 9 个小块：
+      * ttfb (first time to byte) 这个时间段内包括 DNS 查找、TCP 连接和 SSL 连接
+      * dcl DOMContentLoaded
+      * l load
+  * 文档的渲染呈现过程
+    * fp,fcp(首次内容渲染)
+    * fmp first main point . 首次重要内容出现
+    * lcp， 最大内容绘制， 2.5s内表示优秀。
+    ```
+    LCP 目前并不会计算所有元素，因为这样会使这个指标变得非常复杂，它现在只关注下面的元素：
+    <img> 元素
+    <image>元素内的<svg>元素
+    <video> 元素
+    通过 url() 函数加载背景图片的元素
+    包含文本节点或其他内联文本元素子级的块级元素。
+    ```
+    * fsp 首次内容全部价值 first sceen point
+
+  * 交互过程
+    * tti  time to interactive 。首次可以达到交互的时间点
+    * fci
+    * fps
+
+本文，我们学习了从文档加载到用户交互所涉及的性能指标：
+
+  文档加载过程：
+  TTFB：从请求开始到接收第一字节的时间
+  DCL：空白到出现内容所花费的时间
+  L：onLoad 事件触发所需时间
+  渲染呈现过程：
+  FP&FCP：首次绘制（FP，可能是背景色或loading），首次内容绘制时间（FCP）
+  FMP：首要内容出现在屏幕上的时间
+  LCP：视窗内最大的元素绘制的时
+  SI：页面加载过程中内容可视化显示的速度
+  FSP：从开始加载到首屏内容全部绘制完成的时间
+  交互过程：
+  TTI：网页首次完全达到可交互状态的时间点
+  FCI：页面首可交互时间
+  FID：首次输入延迟
+  FPS：每秒可以重新绘制的帧数，用于衡量应用流畅度
+  其中最重要的是白屏时间（FP&FCP）、首屏时间（FSP）、可交互时间（FCI）、可持续交互时间（TTI），下一章，我们将走进新一代性能指标 Web Vitals
+
+
