--- a/面试/leung/weixin/源码系列.md
+++ b/面试/leung/weixin/源码系列.md
@@ -108,7 +108,7 @@
       throw new Error("参数要为数组")
     } 
     const func = this
-    object.fn = this // 函数只想fn
+    target.fn = this // 函数只想fn
     const result = obect.fn(rest)
     delete object.fn
     return result 
