--- a/面试/leung/weixin/项目优化.md
+++ b/面试/leung/weixin/项目优化.md
@@ -1,5 +1,6 @@
 ### 性能优化指标
-
+[24条性能优化](https://juejin.cn/post/6892994632968306702#heading-49)
+MinChunkSizePlugin
 
 ### 项目优化
   * 优化webpack配置
@@ -98,5 +99,13 @@
   FID：首次输入延迟
   FPS：每秒可以重新绘制的帧数，用于衡量应用流畅度
   其中最重要的是白屏时间（FP&FCP）、首屏时间（FSP）、可交互时间（FCI）、可持续交互时间（TTI），下一章，我们将走进新一代性能指标 Web Vitals
+
+  ```
+      getCLS(onPerfEntry); 较低的CLS有助于确保页面用户视觉和交互体验
+      getFID(onPerfEntry);
+      getFCP(onPerfEntry);
+      getLCP(onPerfEntry);
+      getTTFB(onPerfEntry);
+  ```
 
 
